fixed margins on text to align page text closer to mockup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,15 @@ header {
     color: darkblue;
 }
 
+h3 {
+    margin: 0;
+}
+
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 3%;
 }
 
 p {
